syntax = "proto3";

package openagents.sync.v2;

import "openagents/sync/v2/errors.proto";
import "openagents/sync/v2/streams.proto";

message Subscribe {
  repeated string stream_ids = 1;
  repeated StreamCursor resume_after = 2;
  string request_id = 3;
  string client_build_id = 4;
  string protocol_version = 5;
  uint32 schema_version = 6;
}

message SubscribeApplied {
  string subscription_id = 1;
  repeated StreamCursor current_watermarks = 2;
  bool replay_complete = 3;
}

message TransactionUpdate {
  string stream_id = 1;
  uint64 seq = 2;
  bytes payload = 3;
  bytes payload_hash = 4;
  bool replayed = 5;
  bool confirmed_read = 6;
}

message TransactionBatch {
  repeated TransactionUpdate updates = 1;
  bool replay_complete = 2;
  repeated StreamCursor head_watermarks = 3;
}

message Heartbeat {
  repeated StreamCursor watermarks = 1;
}

message Error {
  SyncErrorCode code = 1;
  string message = 2;
  uint32 retry_after_ms = 3;
  bool full_resync_required = 4;
  bool upgrade_required = 5;
  string min_client_build_id = 6;
  string max_client_build_id = 7;
  uint32 min_schema_version = 8;
  uint32 max_schema_version = 9;
  string protocol_version = 10;
}

enum SyncFrameKind {
  SYNC_FRAME_KIND_UNSPECIFIED = 0;
  SYNC_FRAME_KIND_SUBSCRIBE_APPLIED = 1;
  SYNC_FRAME_KIND_TRANSACTION_BATCH = 2;
  SYNC_FRAME_KIND_HEARTBEAT = 3;
  SYNC_FRAME_KIND_ERROR = 4;
}

message SyncFrame {
  string channel = 1;
  uint64 frame_seq = 2;
  SyncFrameKind kind = 3;
  bytes payload_bytes = 4;
  uint32 schema_version = 5;
}

